[gd_scene load_steps=40 format=3 uid="uid://cula7pwy4q455"]

[ext_resource type="Script" path="res://Scripts/EnemyScripts/FarwayEnemies/scr_hunter.gd" id="1_m5x75"]
[ext_resource type="Texture2D" uid="uid://bcwyp7atpwu7m" path="res://Scripts/GameScripts/Shadows/spr_shadow_r12.png" id="2_qnt1g"]
[ext_resource type="Texture2D" uid="uid://cvjogw318t2h2" path="res://Sprites/GUISprites/EnemyGUI/spr_healthbar_enemy.png" id="3_bp4rq"]
[ext_resource type="Texture2D" uid="uid://bpdkjgb0xdwfa" path="res://Sprites/GUISprites/EnemyGUI/spr_healthbar_enemy_fill.png" id="4_4oxt8"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/GeneralEnemy/scr_healthbar_enemy.gd" id="5_ptxr5"]
[ext_resource type="Texture2D" uid="uid://dftmg2gat04v4" path="res://Sprites/GUISprites/EnemyGUI/spr_shieldbar_enemy_fill.png" id="6_0u0xv"]
[ext_resource type="Texture2D" uid="uid://b63e45g4pe5ek" path="res://Sprites/EnemySprites/spr_enemy_hunter.png" id="6_ibom3"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/GeneralEnemy/scr_enemy_sprite.gd" id="7_13i3s"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/GeneralEnemy/scr_shieldbar_enemy.gd" id="7_yjqx6"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/FarwayEnemies/scr_hunter_slash.gd" id="8_2dolj"]
[ext_resource type="Shader" path="res://Scripts/Shaders/sdr_enemy.gdshader" id="8_xshp3"]
[ext_resource type="AudioStream" uid="uid://lygsusjeso34" path="res://Audio/EnemyAudio/snd_skirmisher_slash.mp3" id="9_clvev"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/FarwayEnemies/scr_hunter_bowshot.gd" id="10_1dfv7"]
[ext_resource type="AudioStream" uid="uid://bkctl01akyku0" path="res://Audio/EnemyAudio/snd_skirmisher_damaged.wav" id="10_cwx2p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s7w7t"]
resource_local_to_scene = true
shader = ExtResource("8_xshp3")
shader_parameter/hurt_color = Color(0.6, 0.2, 0.2, 1)
shader_parameter/inv_color = Color(0.67, 0.59, 0.16, 1)
shader_parameter/shield_color = Color(0.8, 0.8, 1, 1)
shader_parameter/blink_intensity = 0.0
shader_parameter/is_hurt = false
shader_parameter/is_invincible = false
shader_parameter/is_shielded = false

[sub_resource type="Animation" id="Animation_doyhu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack1Area:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemySprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_lswdh"]
resource_name = "anim_bowshot_down"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_w1wk0"]
resource_name = "anim_bowshot_left"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 3), Vector2i(13, 3), Vector2i(14, 3), Vector2i(15, 3), Vector2i(16, 3), Vector2i(17, 3)]
}

[sub_resource type="Animation" id="Animation_li8ek"]
resource_name = "anim_bowshot_right"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_7q2t1"]
resource_name = "anim_bowshot_up"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3), Vector2i(10, 3), Vector2i(11, 3)]
}

[sub_resource type="Animation" id="Animation_r4bek"]
resource_name = "anim_idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_bsakv"]
resource_name = "anim_idle_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_ntwkt"]
resource_name = "anim_idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_io01p"]
resource_name = "anim_idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_i3kq2"]
resource_name = "anim_run_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack1Area:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 1), Vector2i(13, 1), Vector2i(14, 1), Vector2i(15, 1)]
}

[sub_resource type="Animation" id="Animation_1ntnc"]
resource_name = "anim_run_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack1Area:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1)]
}

[sub_resource type="Animation" id="Animation_f4xjr"]
resource_name = "anim_run_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack1Area:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_xx82t"]
resource_name = "anim_run_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack1Area:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_f3g8u"]
resource_name = "anim_slash_down"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(15, 2), Vector2i(16, 2), Vector2i(17, 2), Vector2i(18, 2), Vector2i(19, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -6), Vector2(10, -6), Vector2(10, 2), Vector2(0, 3), Vector2(-7, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack1Area:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.5708, 1.5708, 2.35619, 3.14159, 3.92699]
}

[sub_resource type="Animation" id="Animation_r5q2o"]
resource_name = "anim_slash_left"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(10, 2), Vector2i(11, 2), Vector2i(12, 2), Vector2i(13, 2), Vector2i(14, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, 4), Vector2(-9, 2), Vector2(-11, -5), Vector2(-9, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack1Area:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [3.14159, 3.14159, 3.92699, 4.71239, 5.49779]
}

[sub_resource type="Animation" id="Animation_k57ix"]
resource_name = "anim_slash_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, -19), Vector2(2, -19), Vector2(9, -14), Vector2(11, -5), Vector2(9, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack1Area:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.785398, 1.5708, 2.35619]
}

[sub_resource type="Animation" id="Animation_ogq4y"]
resource_name = "anim_slash_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack1Area:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-12, -5), Vector2(-12, -5), Vector2(-11, -12), Vector2(0, -19), Vector2(7, -14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack1Area:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.5708, -0.785398, 0.0, 0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_66d24"]
_data = {
"RESET": SubResource("Animation_doyhu"),
"anim_bowshot_down": SubResource("Animation_lswdh"),
"anim_bowshot_left": SubResource("Animation_w1wk0"),
"anim_bowshot_right": SubResource("Animation_li8ek"),
"anim_bowshot_up": SubResource("Animation_7q2t1"),
"anim_idle_down": SubResource("Animation_r4bek"),
"anim_idle_left": SubResource("Animation_bsakv"),
"anim_idle_right": SubResource("Animation_ntwkt"),
"anim_idle_up": SubResource("Animation_io01p"),
"anim_run_down": SubResource("Animation_i3kq2"),
"anim_run_left": SubResource("Animation_1ntnc"),
"anim_run_right": SubResource("Animation_f4xjr"),
"anim_run_up": SubResource("Animation_xx82t"),
"anim_slash_down": SubResource("Animation_f3g8u"),
"anim_slash_left": SubResource("Animation_r5q2o"),
"anim_slash_right": SubResource("Animation_k57ix"),
"anim_slash_up": SubResource("Animation_ogq4y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58a7n"]
resource_local_to_scene = true
size = Vector2(9, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grp8a"]
size = Vector2(5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jy75p"]
resource_local_to_scene = true
size = Vector2(9, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_nexmf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_33kqs"]
radius = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xkxup"]
size = Vector2(480, 270)

[node name="Hunter" type="CharacterBody2D" groups=["Enemy"]]
y_sort_enabled = true
collision_layer = 16
collision_mask = 274
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_m5x75")

[node name="ShadowSprite" type="Sprite2D" parent="."]
show_behind_parent = true
texture = ExtResource("2_qnt1g")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -5.0
offset_top = 1.0
offset_right = 5.0
offset_bottom = 4.0
value = 50.0
texture_under = ExtResource("3_bp4rq")
texture_progress = ExtResource("4_4oxt8")
script = ExtResource("5_ptxr5")

[node name="ShieldBar" type="TextureProgressBar" parent="."]
offset_left = -5.0
offset_top = 1.0
offset_right = 5.0
offset_bottom = 4.0
value = 50.0
texture_under = ExtResource("3_bp4rq")
texture_progress = ExtResource("6_0u0xv")
script = ExtResource("7_yjqx6")

[node name="EnemySprite" type="Sprite2D" parent="."]
clip_children = 2
material = SubResource("ShaderMaterial_s7w7t")
texture = ExtResource("6_ibom3")
offset = Vector2(0, -7)
hframes = 20
vframes = 20
frame = 1
script = ExtResource("7_13i3s")

[node name="ColorRect" type="ColorRect" parent="EnemySprite"]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_66d24")
}

[node name="Movebox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_58a7n")

[node name="Attack1Area" type="Area2D" parent="."]
visible = false
position = Vector2(6, -4)
rotation = 1.5708
collision_layer = 64
collision_mask = 2
script = ExtResource("8_2dolj")

[node name="Attack1SFX" type="AudioStreamPlayer" parent="Attack1Area"]
stream = ExtResource("9_clvev")
volume_db = -25.0
pitch_scale = 0.5

[node name="Attack1AudioTimer" type="Timer" parent="Attack1Area"]
wait_time = 0.25
one_shot = true

[node name="Attack1Damagebox" type="CollisionShape2D" parent="Attack1Area"]
position = Vector2(-0.5, 9.53674e-07)
shape = SubResource("RectangleShape2D_grp8a")

[node name="Attack2Area" type="Area2D" parent="."]
visible = false
position = Vector2(6, -4)
rotation = 1.5708
collision_layer = 64
collision_mask = 2
script = ExtResource("10_1dfv7")

[node name="Attack2SFX" type="AudioStreamPlayer" parent="Attack2Area"]
stream = ExtResource("9_clvev")
volume_db = -25.0
pitch_scale = 0.5

[node name="Attack2AudioTimer" type="Timer" parent="Attack2Area"]
wait_time = 0.25
one_shot = true

[node name="Attack2Damagebox" type="CollisionShape2D" parent="Attack2Area"]
position = Vector2(-0.5, 9.53674e-07)
shape = SubResource("RectangleShape2D_grp8a")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="Hitbox" type="CollisionShape2D" parent="HitArea"]
position = Vector2(1, -5)
shape = SubResource("RectangleShape2D_jy75p")

[node name="Navigation" type="Node2D" parent="."]
visible = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_desired_distance = 8.0
target_desired_distance = 8.0
path_postprocessing = 1
avoidance_enabled = true
radius = 6.0
max_speed = 50.0

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.25
autostart = true

[node name="Attack1Detect" type="Area2D" parent="Navigation"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="Attack1DetectCircle" type="CollisionShape2D" parent="Navigation/Attack1Detect"]
rotation = 1.5708
shape = SubResource("CircleShape2D_nexmf")

[node name="Attack2Detect" type="Area2D" parent="Navigation"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="Attack2DetectCircle" type="CollisionShape2D" parent="Navigation/Attack2Detect"]
rotation = 1.5708
shape = SubResource("CircleShape2D_33kqs")

[node name="AggroDetect" type="Area2D" parent="Navigation"]
collision_layer = 0
collision_mask = 2

[node name="AggroDetectCircle" type="CollisionShape2D" parent="Navigation/AggroDetect"]
shape = SubResource("RectangleShape2D_xkxup")

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_cwx2p")
volume_db = -5.0

[connection signal="timeout" from="Attack1Area/Attack1AudioTimer" to="." method="_on_attack1_audio_timer_timeout"]
[connection signal="timeout" from="Attack2Area/Attack2AudioTimer" to="." method="_on_attack1_audio_timer_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_hitbox_area_exited"]
[connection signal="velocity_computed" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_velocity_computed"]
[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="Navigation/Attack1Detect" to="." method="_on_attack1_detect_area_entered"]
[connection signal="area_exited" from="Navigation/Attack1Detect" to="." method="_on_attack1_detect_area_exited"]
[connection signal="area_entered" from="Navigation/Attack2Detect" to="." method="_on_attack2_detect_area_entered"]
[connection signal="area_exited" from="Navigation/Attack2Detect" to="." method="_on_attack2_detect_area_exited"]
[connection signal="area_entered" from="Navigation/AggroDetect" to="." method="_on_aggro_detect_area_entered"]
